[package]
name = "ws63-pac"
version = "0.1.2"
edition = "2024"
description = "Peripheral Access Crate for HiSilicon WS63 (RISC-V) — generated via svd2rust"
license = "MIT"
repository = "https://github.com/sanchuanhehe/ws63-pac"
keywords = ["ws63", "hisilicon", "riscv", "embedded", "svd2rust"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
critical-section = { version = "1", optional = true }
vcell = "0.1"

# The `riscv` crate (and its riscv-pac dep) only builds for riscv targets. The
# generated `interrupt` module's riscv-lib re-exports + the `#[riscv::pac_enum]`
# impl on `ExternalInterrupt` are cfg-gated to riscv32 (see ws63-svd/postprocess.py),
# so on host the crate compiles without `riscv` — letting ws63-hal run host unit tests.
[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = "0.13"

[features]
default = ["critical-section"]
rt = []

[profile.release]
opt-level = "s"
lto = true
